app/css/style.css
body {
  background-color: #eee;
}

@font-face {
    font-family: 'Quando';
    font-style: normal;
    src: local('Quando Regular'), local('Quando-Regular'), url(fonts/Quando/Quando-Regular.ttf) format('truetype');
}


/*navbar*/

.nav {
  padding-left: 40px;
}

.navbar {
  min-height: 85px;
  min-width: 475px;
}
.navbar-header img {
  height: 50px
}

.navbar-toggle {
  margin-top: 20px;
}


.appTitle {
  display: inline-block;
  padding: 15px 0 0 76px;
  font-family: 'Quando', garamond;
  font-size: 40px;
}

.fa-power-off {
  font-size: 36px;
}

ul.navbar-nav {
  padding-top: 15px;
}

.navbar-nav li a.add-book-btn {
  background-color: #C15030;
  text-align: center;
  width: 120px;
  font-size: 16px;
  color: #fff;
  outline: none;
  border-bottom: 3px solid #8C2C11;
  border-radius: 4px;
  margin-right: 50px;
}

.navbar-nav li a.add-book-btn:hover {
  background-color: #C15030;
  color: #fff;
  margin-top: 3px;
  border-bottom: none;
}

.navbar-nav li a.add-book-btn:focus {
  background-color: #C15030;
  color: #fff
}







#page-content {
  padding-right: 10px;
}



/*sort by*/

.sort-by-container {
  padding-right: 20px;
  min-width: 485px;
}

.sort-by {
  float: right;
}

.sort-by button {
  background-color: #C15030;
  color: #fff;
  border-bottom: 2px solid #8C2C11;
}

.sort-by button:hover {
  color: #fff;
}

.sort-by ul {
  cursor: pointer;
}

.sort-by li:hover {
  background-color: #FABAA7;
}



/*book template*/

#ui-datepicker-div {display: none;}


.bookWrap {
  padding: 0 5px;
  min-width: 450px;
}

.bookContainer {
  border: 1.5px solid #aaa;
  height: 125px;
  background-color: #fff;
  float: left;
  margin: 5px 0;
  font-size: 12px;
  border-radius: 4px;
}

.bookContainer:hover {
  border: 1.5px solid #50C8EB;
}

.bookItemListContainer {
  display: inline-block;
  padding-top: 10px;
  height: 96px;
  white-space: nowrap;
  max-width: 244px;
  overflow-x: hidden;
  line-height: 14px;
}

.bookItemListContainer ul {
  overflow-x: auto;
}

.bookImageContainer {
  float: left;
  width: 150px;
  text-align: center;
}

.bookImageContainer img {
  margin: 10px 5px 5px 5px;
  height: 80px;
  max-width: 160px;
  border: 1px solid #000;
  border-radius: 4px;
}

.bookContainer .delete {
  position: absolute;
  right: 0;
  margin-top: 70px;
  margin-right: 10px; 
  height: 35px;
  cursor: pointer;
}

.bookContainer ul {
  list-style-type: none;
  margin-bottom: 0;
  padding-left: 20px;
}

.bookInteractionBar {
  color: #bbb;
  padding-left: 20px;
  font-size: 10px;
}

.bookUpdated {
  display: inline-block;
  width: 145px;
}


/*book comment will be a model to write your notes on the book in*/
.bookButton {
  display: inline-block;
}



/*comment*/

#commentInput {
  outline: none;
  width: 545px;
  margin: 10px;
  border: none;
  resize: vertical;
  max-height: 500px;
}






/*modal*/

#coverImageUpload {
  margin: 0 auto;
  padding-left: 68px;
  margin-bottom: 20px;
}

#imageCoverUpload img {
  display: block;
  margin: 0 auto 20px auto;
}

#uploadedImage {
  max-height: 100px;
}

#addBook label {
  width: 100px;
  margin-right: 10px;
  text-align: right;
  line-height: 25px;
}

#addBook label, #addBook input {
  display: block;
  margin-bottom: 10px;
  float: left;
}

#addBook label[for='title'], #addBook label[for='dateCompleted'] {
  clear: both;
}

#addBook button {
  display: block; margin: 5px 20px 10px 10px;
  float: right;
  clear: both;
}

#addBook div {
  width: 550px;
}

#addBook div:after {
  content: "";
  display: block;
  height: 0;
  visibility: hidden;
  clear: both;
  font-size: 0;
  line-height: 0;
}



/*update book*/

#updateBook label {
  width: 100px;
  margin-right: 10px;
  text-align: right;
  line-height: 25px;
}

#updateBook label, #updateBook input {
  display: block;
  margin-bottom: 10px;
  float: left;
}

#updateBook label[for='title'], #updateBook label[for='dateCompleted'] {
  clear: both;
}

#updateBook button {
  display: block; margin: 5px 20px 10px 10px;
  float: right;
  clear: both;
}

#updateBook div {
  width: 550px;
}

#updateBook div:after {
  content: "";
  display: block;
  height: 0;
  visibility: hidden;
  clear: both;
  font-size: 0;
  line-height: 0;
}



/*starrr*/

.starrr {
  display: inline-block; 
  line-height: 15px;
}

.starrr i {
    font-size: 12px;
    padding: 0 1px;
    cursor: pointer;
    color: #ffd119; }




/*media queries*/


@media (min-width: 600px) {
  .bookItemListContainer {
    max-width: 350px;
  }
}

@media (min-width: 990px) {
  .bookItemListContainer {
    max-width: 244px;
  }
}

@media (min-width: 1200px) {
  .bookItemListContainer {
    max-width: 344px;
  }
}


@media (max-width: 767px) {
  .appTitle {
    display: block;
    float: left;
    padding: 25px 0 0 50px;
    font-family: 'Quando', garamond;
    font-size: 25px;
  }

  .add-book-btn {
    padding-left: 50px;
  }
}

